<resources>
    <string name="generatePassword">Create Password</string>
    <string name="Password_Length">Password Length: %1$d</string>
    <string name="Capital_Letters">Capital Letters (default)</string>
    <string name="Numbers">Numbers</string>
    <string name="Symbols">Symbols</string>
    <string name="Include">Include:</string>
    <string name="Lowercase_Letters">Lowercase Letters</string>
    <string name="Large_Text">Large Text</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_password_list">passwordList</string>
    <string name="app_name">PassBank</string>
    <string name="title_creation">Create Password</string>
    <string name="title_storage">Saved Passwords</string>
    <string name="numbers">0123456789</string>
    <string name="capital_letters">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="lowercase_letters">abcdefghijklmnopqrstuvwxyz</string>
    <string name="password_display">%1$s</string>
    <string name="copy">copy</string>
    <string name="save">save</string>


    <string name="write_file">Write to File</string>
    <string name="read_file">Read from File</string>
    <string name="delete_file">Delete File</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_website">Website:</string>
    <string name="enter_username">Username:</string>
</resources>
