<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pickard.marjorie.com.passbank.create_password">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnGenerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="104dp"
            android:text="@string/generatePassword"
            android:textColor="@color/Darkblue" />


        <SeekBar
            android:id="@+id/lengthSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="104dp"
            android:indeterminate="false"
            android:max="10"
            android:progress="0"
            android:progressTint="@color/lightBlue"
            android:thumbTint="@color/lightBlue" />

        <TextView
            android:id="@+id/lengthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:text="@string/Password_Length"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Darkblue" />

        <CheckBox
            android:id="@+id/capLetCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:buttonTint="@color/lightBlue"
            android:checked="true"
            android:text="@string/Capital_Letters"
            android:textColor="@color/Darkblue" />

        <CheckBox
            android:id="@+id/numCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/symCheckBox"
            android:layout_toEndOf="@+id/btnGenerate"
            android:layout_toRightOf="@+id/btnGenerate"
            android:buttonTint="@color/lightBlue"
            android:checked="false"
            android:text="@string/Numbers"
            android:textColor="@color/Darkblue" />

        <CheckBox
            android:id="@+id/symCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/numCheckBox"
            android:layout_alignStart="@+id/numCheckBox"
            android:layout_alignTop="@+id/lowerCheckBox"
            android:buttonTint="@color/lightBlue"
            android:checked="false"
            android:text="@string/Symbols"
            android:textColor="@color/Darkblue" />

        <TextView
            android:id="@+id/includeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="175dp"
            android:text="@string/Include"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Darkblue" />

        <CheckBox
            android:id="@+id/lowerCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/capLetCheckBox"
            android:layout_alignStart="@+id/capLetCheckBox"
            android:layout_below="@+id/capLetCheckBox"
            android:buttonTint="@color/lightBlue"
            android:checked="false"
            android:text="@string/Lowercase_Letters"
            android:textColor="@color/Darkblue" />

        <TextView
            android:id="@+id/password_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/copyToClipboardButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Darkblue"
            android:textIsSelectable="true" />

        <Button
            android:id="@+id/copyToClipboardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnGenerate"
            android:layout_toEndOf="@+id/btnGenerate"
            android:layout_toRightOf="@+id/btnGenerate"
            android:layout_alignTop="@+id/btnGenerate"
            android:text="@string/copy"
            android:textColor="@color/Darkblue"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btnGenerate"
            android:layout_toLeftOf="@+id/btnGenerate"
            android:layout_alignBottom="@+id/btnGenerate"
            android:text="@string/save"
            android:id="@+id/btnSave"
            android:textColor="@color/Darkblue"/>

    </RelativeLayout>

</FrameLayout>
